c4prj1_deck/grade.txt
Grading at Tue Jul 30 04:22:26 UTC 2019
Compiling deck.c -> deck.o
deck.c: In function ‘add_card_to’:
deck.c:56:29: error: incompatible types when assigning to type ‘card_t * {aka struct card_tag *}’ from type ‘card_t {aka struct card_tag}’
  deck->cards[deck->n_cards] = c;
                             ^
deck.c: In function ‘build_remaining_deck’:
deck.c:85:26: error: incompatible type for argument 2 of ‘add_card_to’
    add_card_to(tmp_deck, hands[i]->cards[j]);
                          ^
deck.c:53:6: note: expected ‘card_t {aka struct card_tag}’ but argument is of type ‘card_t * {aka struct card_tag *}’
 void add_card_to(deck_t* deck, card_t c) {
      ^
Compilation of deck.c failed

Overall Grade: F
